test/invalid/module_package_mismatch.d
//T error: module_package_mismatch.d:4:7:
//T error: Module package mismatches directory hierarchy.

module invalid.module_package_mismatch;
